@startuml ClassDiagram
!include _theme.iuml
title **Aegis — Class Diagram**\n<size:11><color:#666666>Pipeline engine, agents, and schemas</color></size>

package "Pipeline Engine" {
  class PipelineRunner {
    - current_run : PipelineRun
    - state_handlers : dict
    - emit_event : Callable
    + run() : void
    + resume(answers) : void
    - _run_requirements()
    - _run_design()
    - _run_development()
    - _run_build_check()
    - _run_review()
  }

  class PipelineRun {
    + run_id : str
    + state : PipelineState
    + customer_config : CustomerConfigV2
    + code_output : CodeOutput
    + events : list
    + code_revisions : int
    + design_revisions : int
  }

  enum PipelineState {
    INTAKE
    REQUIREMENTS
    CLARIFICATION
    DESIGN
    DEVELOPMENT
    BUILD_CHECK
    REVIEW
    CODE_REVISION
    DESIGN_REVISION
    COMPLETE
    FAILED
  }
}

package "Agents" {
  abstract class BaseAgent {
    + system_prompt : str
    + output_schema : Type
    + execute(context) : BaseModel
    # build_user_prompt(context) : str
    - _call_llm(prompt) : str
    - _validate(raw) : BaseModel
  }

  class RequirementsAnalyst
  class SolutionArchitect
  class Developer
  class QAReviewer

  BaseAgent <|-- RequirementsAnalyst
  BaseAgent <|-- SolutionArchitect
  BaseAgent <|-- Developer
  BaseAgent <|-- QAReviewer
}

package "Schemas (Pydantic)" {
  class CustomerConfigV2 {
    + schema_version : str
    + actors : list<Actor>
    + entities : list<DomainEntity>
    + use_cases : list<UseCase>
    + business_rules : list<BusinessRule>
    + relationships : list<Relationship>
    + validate_integrity()
  }
  class TechnicalDesign
  class CodeOutput
  class CodePatch
  class QAReview
  class BuildCheckResult
}

package "Lifecycle & API" {
  class RunnerManager <<singleton>> {
    + active : dict<str, RunnerEntry>
    + start_run(config) : str
    + get_runner(run_id) : RunnerEntry
    + submit_clarification(run_id, answers)
  }
  class RunnerEntry {
    + runner : PipelineRunner
    + queue : asyncio.Queue
    + task : asyncio.Task
  }
}

PipelineRunner "1" *-- "1" PipelineRun
PipelineRunner ..> BaseAgent : invokes
PipelineRun --> PipelineState
RequirementsAnalyst ..> CustomerConfigV2
SolutionArchitect  ..> TechnicalDesign
Developer          ..> CodeOutput
Developer          ..> CodePatch
QAReviewer         ..> QAReview
PipelineRunner     ..> BuildCheckResult
RunnerManager "1" o-- "*" RunnerEntry
RunnerEntry "1" --> "1" PipelineRunner
@enduml
